fix nowrap on small devices

--- a/stylesheets/site.css
+++ b/stylesheets/site.css
@@ -9379,4 +9379,10 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
   }
 }
 
+@media (max-width: 500px) {
+  .dropdown-item {
+    white-space: normal;
+  }
+}
+
 /*# sourceMappingURL=bootstrap.css.map */
